# Tsumiki-Toolchain

./: .gitmodules  README.md
src/: CMakeLists.txt  main.cc
src/base/: CMakeLists.txt  README.md  flags.h  numeric.h  rtti.cc  rtti.h
src/base/platform/: README.md
src/editor/: README.md
src/editor/hime/: README.md
src/editor/himeui/: README.md
src/editor/ui/: README.md
src/kate/: CMakeLists.txt  README.md
src/kate/gpu/: adapter.cc  device.cc  device.h  extent.h  memory.cc  memory.h
src/kate/gpu/vk/: adapter.cc  device.cc  device.h  vk_adapter.h  vk_device.cc  vk_device.h
src/kate/include/kate/: adapter.h  compute_encoder.h  device.h  extent.h  memory.h  queue.h  render_encoder.h  sampler.h  swapchain.h  texture.h
src/kate/src/gpu/: adapter.cc  buffer.cc  buffer.h  device.cc  extent.cc  memory.cc  pipeline.h  queue.cc
src/kate/src/gpu/vk/: vk_adapter.cc  vk_adapter.h  vk_config.h  vk_device.cc  vk_device.h  vk_queue.cc  vk_queue.h  vk_swapchain.cc  vk_swapchain.h  vk_texture.cc  vk_texture.h
src/kate/src/translator/: CMakeLists.txt  ast.cc  ast.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  resolver.cc  resolver.h  sem.cc  sem.h  test.ksl  types.cc  types.h
src/kate/src/translator/printers/: glsl.cc  glsl.h
src/runtime/: README.md
tools/: sync.py
